Fixed  spacing issues in main temperature card

--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@ footer {
 .degree {
   font-size: 20px;
   position: relative;
-  top: -30px;
+  top: -40px;
 }
 
 .card-title {
